--- a/CSS/payment.css
+++ b/CSS/payment.css
@@ -4,7 +4,7 @@
 .button{
     font-size: 20px;
     color: black;
-    background-color: brown;
+    background-color: #FC1704;
     border-radius: 20px ;
     width: 23%;
   }
@@ -12,5 +12,5 @@
   
 
   body{
-    background-color: darkblue;
+    background-color: #A1D8F7;
   }
