--- a/CSS/help centre.css
+++ b/CSS/help centre.css
@@ -6,10 +6,10 @@
 
     body {
       font-family: Arial, Helvetica, sans-serif;
-      background-color: darkblue;
+      background-color: #A1D8F7;
     }
     h1{
-      color: aliceblue;
+      color: black;
     }
 
     .mycard {
