--- a/CSS/sign up.css
+++ b/CSS/sign up.css
@@ -5,12 +5,12 @@
 
   body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: darkblue;
+    background-color: #A1D8F7;
   }
 
   button {
     color: black;
-    background-color: brown;
+    background-color: #FC1704;
     /* font-size: 40px; */
     border-radius: 20px;
     width: 90%;
