--- a/CSS/cart.css
+++ b/CSS/cart.css
@@ -1,16 +1,132 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
-@import url('https://fonts.googleapis.com/css2?family=Metal+Mania');
+/* @import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania'); */
 
 * {
     box-sizing: border-box;
-    font-family: Raleway;
-    color: #777;
+    /* font-family: Raleway; */
+    color: rgb(255, 255, 255);
 }
 
 html, body {
     padding: 0;
     margin: 0;
+    background-color: #A1D8F7;
 }
+header {
+    background: rgb(0, 0, 0);
+    display: flex;
+    color: rgb(255, 255, 255);
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .main_header a {
+    float: right;
+    display: block;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 14px 12px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .main_header .search-container {
+    float: right;
+  }
+  
+  .main_header input[type=text] {
+    padding: 6px;
+    width: 500px;
+    font-size: 17px;
+    border: none;
+  }
+  
+  .main_header .search-container button {
+    float: right;
+    padding: 6px 10px;
+    margin-right: 16px;
+    background: #ccc;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .main_header .search-container button:hover {
+    background: rgb(160, 159, 159);
+  }
+  
+  .main_header .logo:hover {
+    cursor: pointer;
+  }
+  
+  .logo {
+    margin-top: 4px;
+  }
+  
+  .signup i {
+    margin-top: 15px;
+  }
+  
+  .signup-box {
+    padding: 0 15px 0 15px;
+  }
+  
+  .signup-box:hover {
+    background-color: rgb(126, 127, 133);
+    cursor: pointer;
+  }
+  
+  .cart i {
+    margin-top: 15px;
+  }
+  
+  .cart-box {
+    padding: 0 15px 0 15px;
+  }
+  
+  .cart-box:hover {
+    background-color: rgb(126, 127, 133);
+    cursor: pointer;
+  }
+  
+  .dropbtn {
+    background: rgb(0, 0, 0);
+    ;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 50px;
+    text-decoration: none;
+  }
+  .dropdown-content a:hover {
+    color: rgb(126, 127, 133);
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .dropdown:hover .dropbtn {
+    background-color: rgb(126, 127, 133);
+  }
+  
 /* Product pages start */
 .navbar {
     overflow: hidden;
@@ -101,6 +217,7 @@ html, body {
 }
 
 .cart-column {
+  font-weight: bold;
     display: flex;
     align-items: center;
     border-bottom: 1px solid black;
