--- a/CSS/payment.css
+++ b/CSS/payment.css
@@ -1,12 +1,13 @@
 *{
     font-size: 20px;
   }
-.button{
+button{
     font-size: 20px;
-    color: black;
-    background-color: #FC1704;
+    color: white;
+    background-color: darkblue;
     border-radius: 20px ;
     width: 23%;
+    margin: 10px;
   }
 
   
